--- a/content/2018/france/styles.css
+++ b/content/2018/france/styles.css
@@ -8133,7 +8133,7 @@ html {
     margin-top: 0;
   }
   .footer-other-working-groups .img-responsive {
-    max-width: 175px;
+    max-width: 100%;
   }
   .footer-other-working-groups .footer-working-group-col {
     padding: 0;
